# tracking

./: README.md
kf_tracking/: CMakeLists.txt  package.xml
kf_tracking/config/: kf_tracking.yaml
kf_tracking/include/kf_tracking/: kf_tracking.h  observation.h  track.h
kf_tracking/launch/: kf_tracking.launch
kf_tracking/msg/: Tracklet.msg
kf_tracking/src/: kf_tracking.cpp  kf_tracking_node.cpp
simple_data_publisher/: CMakeLists.txt  package.xml
simple_data_publisher/data/: dataobs3.txt  dataobs4.txt
simple_data_publisher/launch/: simple_data_publisher.launch
simple_data_publisher/msg/: Observation2D.msg  Observation2DArray.msg
simple_data_publisher/src/: simple_data_publisher_node.cpp
tracking_example/: CMakeLists.txt  package.xml
visualization/: CMakeLists.txt  package.xml  plugin_description.xml
visualization/include/visualization/: tracking_display.h  tracklet_visual.h  visualization.h
visualization/launch/: visualization.launch
visualization/src/: tracking_display.cpp  tracklet_visual.cpp  visualization.cpp  visualization_node.cpp
