<?xml version="1.0"?>
<package format="2">
  <name>kf_tracking</name>
  <version>0.0.0</version>
  <description>The kf_tracking package</description>

  <maintainer email="oksana@todo.todo">oksana</maintainer>

  <license>TODO</license>

  <depend>eigen</depend>
  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>simple_data_publisher</depend>
  <exec_depend>message_runtime</exec_depend>

  
  <export>
  </export>
</package>
