<?xml version="1.0"?>
<package format="2">
  <name>simple_data_publisher</name>
  <version>0.0.0</version>
  <description>The simple_data_publisher package</description>

  <maintainer email="oksana@todo.todo">oksana</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
