<?xml version="1.0"?>
<package format="2">
  <name>tracking_example</name>
  <version>0.0.0</version>
  <description>The tracking_example package</description>

  <maintainer email="oksana@todo.todo">oksana</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>kf_tracking</depend>
  <depend>simple_data_publisher</depend>
  <depend>visualization</depend>

   <export>
  </export>
</package>
