<?xml version="1.0"?>
<package format="2">
  <name>visualization</name>
  <version>0.0.0</version>
  <description>The visualization package</description>

  <maintainer email="oksana@todo.todo">oksana</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>kf_tracking</depend>
  <depend>simple_data_publisher</depend>
  <depend>visualization_msgs</depend>

  <depend>qtbase5-dev</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>
  <depend>rviz</depend>

  <export>
  <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
